[package]
name = "rust-terbilang"
version = "0.1.0"
authors = ["Des Dulianto <desdulianto@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A tool and library for converting number to said number in Indonesia Language (Bahasa Indonesia)"
homepage = "https://github.com/desdulianto/rust-terbilang"
repository = "https://github.com/desdulianto/rust-terbilang"
keywords = ["cli", "terbilang", "said number"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "terbilang"
path = "src/lib.rs"

[[bin]]
name = "terbilang"
path = "src/main.rs"

[dependencies]
